<resources>
    <string name="app_name">Panda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_happy_to_have_you_here">Welcome, happy to have you here</string>
    <string name="welcome">أهلا بيك , باندا نورت بيك</string>
    <string name="beauty">Beauty</string>
    <string name="yer_70000">YER 70000</string>
    <string name="brand">Brand</string>
    <string name="department">Department</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="done">Done</string>
    <string name="review_the_condition_of_the_product">Review the condition of the product</string>
    <string name="submit">Submit</string>
    <string name="write_a_review">write a review</string>
    <string name="added_to_wishlist_successfully">Added to wishlist successfully</string>
    <string name="about_us">About us</string>
    <string name="the_largest_e_commerce_site_in_the_arab_world_every_month_souq_com_attracts_more_than_30_million_visits_to_its_catalog_of_more_than_2_million_unique_products_in_10_different_categories_including_books_cars_consumer_electronics_home_goods_fashion_watches_fragrances_toys_and_baby_products_founded_in_2023_panda_today_operates_as_an_award_winning_retailer_and_online_marketplace_that_allows_small_and_medium_businesses_merchants_brands_and_distributors_to_distribute_their_products_online">The largest e-commerce site in the Arab world. Every month, Souq.com attracts more than 30 million visits to its catalog of more than 2 million unique products in 10 different categories, including books, cars, consumer electronics, home goods, fashion, watches, fragrances, toys, and baby products. Founded in 2023, Panda today operates as an award-winning retailer and online marketplace that allows small and medium businesses, merchants, brands and distributors to distribute their products online.</string>
    <string name="added_to_cart_successfully">Added to cart successfully</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="view_cart">View Cart</string>
    <string name="what_are_you_looking_for">What are you looking for</string>
    <string name="abdalla_ayash">Abdalla Ayash</string>
    <string name="my_wallet">My Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="information_profile">Information Profile</string>
    <string name="user_name">User Name</string>
    <string name="mokhtar_dewydar">Mokhtar Dewydar</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="delivery_to_sanaa_yemen">Delivery to Sanaa, Yemen</string>
    <string name="address">address</string>
    <string name="offers">Offers</string>
    <string name="skip">Skip</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="support">Support</string>
    <string name="language">Language</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about">About</string>
    <string name="_3_items" translatable="false"></string>
    <string name="my_balance">My Balance</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="add_balance">Add balance</string>
    <string name="payment_methods">Payment methods</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="the_order_has_been_submitted">The order has been submitted</string>
    <string name="successfully">Successfully</string>
    <string name="to_follow_the_status_of_the_order">To follow the status of the order</string>
    <string name="shopping_again">Shopping Again</string>
    <string name="enter_otp_code">Enter otp code</string>
    <string name="enter_the_code_sent_to_you_in_a_message_on_your_email">Enter the code sent to you in a message on your SMS</string>
    <string name="total_amount_sr_930_00">Total amount SR 930.00</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp.Date</string>
    <string name="mm_yy">MM / YY</string>
    <string name="name_on_card">Name on card</string>
    <string name="save_card_for_future_payments">Save card for future payments</string>
    <string name="your_payment_is_100_secure">Your payment is 100% secure</string>
    <string name="pay_now">Pay Now</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="_4_items">(0 items)</string>
    <string name="new_products">New products</string>
    <string name="have_been_added_new_products_in_section_the_fashion">Have been added new products in section the fashion</string>
    <string name="_15_mar_2023">15 Mar 2023</string>
    <string name="my_cart">My Cart</string>
    <string name="your_panda_">"Your Panda cart is empty "</string>
    <string name="subtotal_2_">Subtotal</string>
    <string name="shipping_fe">Shipping Fee</string>
    <string name="yer_930_00">"YER 930.00 "</string>
    <string name="yer_50_00">YER 50.00</string>
    <string name="total">Total</string>
    <string name="deliver_to">Deliver To</string>
    <string name="yer_980_00">YER 980.00</string>
    <string name="get_it_by">Get it by</string>
    <string name="locationToDeliver">السالمية</string>
    <string name="tuesday_mar_7">Tuesday, Mar 7</string>
    <string name="use_my_wallet_credit_100_yer">Use my wallet credit 100 YER</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="check_out">Check Out</string>
    <string name="select_a_payment_method">Select a Payment method</string>
    <string name="add_a_credit_or_debit_card">Add a Credit or debit card</string>
    <string name="selected_item">Selected item:</string>
    <string name="continue_to_shopping">Shopping more</string>
    <string name="yes">Yes</string>
    <string name="similar_products">similar products</string>
    <string name="best_seller">best seller</string>
    <string name="helpful">Helpful</string>
    <string name="report">Report</string>
    <string name="order_number">Order Number:</string>
    <string name="num_of_items">Num of Items:</string>
    <string name="date">Date:</string>
    <string name="electronics">electronics</string>
    <string name="phones">phones</string>
    <string name="descriptions">Descriptions</string>
    <string name="this_item_will_be_delivered_in_72_hours">This item will be delivered in 72 hours</string>
    <string name="specifications">Specifications</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="home">Home</string>
    <string name="wishlist">WishList</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="my_account">My Account</string>
    <string name="detect_the_shipping_location">Detect the shipping location</string>
    <string name="do_you_want_go_to_check_out">Do you want go to check out ?</string>
    <string name="search">search</string>
    <string name="color__">Color:</string>
    <string name="size__">Size:</string>
    <string name="pay_with_wallet">Pay with Wallet</string>
    <string name="_6_global_ratings">6 global ratings</string>
    <string name="_5_star">5 star</string>
    <string name="_4_star">4 star</string>
    <string name="_3_star">3 star</string>
    <string name="_2_star">2 star</string>
    <string name="_1_star">1 star</string>
    <string name="customer_reviews">Customer reviews</string>
    <string name="_0">0 %</string>
    <string name="_10">10 %</string>
    <string name="_30">30 %</string>
    <string name="_70">70 %</string>
    <string name="error">Error!</string>
    <string name="please_check_interent">Please check your network connection and try again</string>
    <string name="close_app">close app</string>
    <string name="try_again">Try Again</string>
    <string name="dialog_login">To checkout you should have an account \n are you really want to login or sign up ?</string>
    <string name="cancel">Cancel</string>
    <string name="login_btn">Login</string>
    <string name="detect_location">Detect Location</string>
    <string name="my_address">My Address</string>
    <string name="log_out">Log Out</string>
    <string name="address_list">Address List</string>
    <string name="you_can_add_your_saftey_list_here">you can add your saftey List Here...</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_number">Address Number:</string>
    <string name="address_list_item">Address:</string>
    <string name="phone_num">01117565737</string>
    <string name="phone_num_tv">Phone Num:</string>

</resources>