<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home"  />
    <item
        android:id="@+id/wishListFragment"
        android:icon="@drawable/favorite_icon"
        android:title="@string/wishlist" />
    <item
        android:id="@+id/categories1Fragment"
        android:icon="@drawable/categories"
        android:title="@string/categories" />
    <item
        android:id="@+id/myCartFargment"
        android:icon="@drawable/cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/myAccountFragment2"
        android:icon="@drawable/my_account"
        android:title="@string/my_account" />

</menu>