<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AuthFlow.login.LoginFragment">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:elevation="70dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="100dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/panda_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/splash_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/text_input_shadow"
            android:drawableStart="@drawable/person_icon"
            android:fontFamily="@font/regular"
            android:hint="@string/user_name"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_input_shadow"
            android:hint="@string/first_name"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text=""
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            app:layout_constraintEnd_toStartOf="@id/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_input_shadow"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingVertical="10dp"
            android:text=""
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/first_name"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@id/first_name"
            app:layout_constraintTop_toTopOf="@id/first_name"/>


        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/text_input_shadow"
            android:drawableStart="@drawable/phone_icon"
            android:fontFamily="@font/regular"
            android:hint="@string/enter_your_number"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/text_input_shadow"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phoneNumber" />

        <ProgressBar
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:indeterminateTint="@color/black"
            android:paddingHorizontal="40dp"
            android:paddingVertical="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />
        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/radius_background"
            android:fontFamily="@font/regular"
            android:paddingVertical="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintVertical_bias="0.294"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/haveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/regular"
            android:text="@string/have_an_account"
            android:textAlignment="center"
            android:textColor="#0B0B0B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signUp" />

        <TextView
            android:id="@+id/signIn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/haveAnAccount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>