<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/submit_dialog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/do_you_want_go_to_check_out"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            android:lineHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            android:layout_marginEnd="10dp"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/continueToShopping"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_dialog_tv"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueToShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/continue_to_shopping"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/yes"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>