<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/brand_card"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/regular"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_brand"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/departMent_card"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/regular"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_department"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/size_card"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departMent_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/regular"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/color_card"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/size_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/regular"
            android:text="@string/color"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myOrder_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#2B2828"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/size_card"
        app:layout_goneMarginTop="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>